--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,11 +33,9 @@ jobs:
         cp -r dist plugins/
         find . -name "*.qml" -exec cp "{}" plugins/ \;
         find . -name "*.png" -exec cp "{}" plugins/ \;
-        cd plugins
-        zip -r ../plugins.zip .
       
     - name: Upload artifact
       uses: actions/upload-artifact@v4
       with:
         name: plugins
-        path: plugins.zip
+        path: ./plugins
