--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "altercolor",
+  "name": "MuseScore-Plugins",
   "version": "1.0.0",
   "description": "",
-  "license": "ISC",
+  "license": "MIT",
   "author": "",
   "type": "module",
   "main": "main.js",
