--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "node build.mjs"
   },
   "devDependencies": {
+    "@types/node": "^22.14.1",
     "esbuild": "0.25.2",
     "typescript": "^5.8.3"
   }
